# rile-django-training

./: README.md  pyproject.toml
django_beginner/: db.sqlite3
django_beginner/django_beginner/: asgi.py  settings.py  urls.py  wsgi.py
django_beginner/members/: models.py  urls.py  views.py
django_beginner/members/migrations/: 0001_initial.py
django_beginner/members/templates/: add_new_member.html  main.html  update_member.html  who_we_are.html
django_beginner/utils/: add_members.py
